general/block-operations/examples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: BlockOperations
metadata:
  name: block-operations
