general/block-operations/examples/ns_empty_string_ato.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    project.ssc-spc.gc.ca/authority-to-operate: ""
  name: my-namespace
