general/block-operations/examples/ns_with_ato.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    project.ssc-spc.gc.ca/authority-to-operate: "test"
  name: my-namespace
