general/block-operations/examples/resources/job.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: example-job
  namespace: my-namespace
spec:
  template:
    metadata:
      name: example-job
    spec:
      containers:
      - name: example-container
        image: busybox
        command: ["echo", "Hello, world!"]
      restartPolicy: Never
